CSS Corrections to align with changes implemented on Sandery.Dev

--- a/src/main.css
+++ b/src/main.css
@@ -260,13 +260,14 @@ div#projectList {
   
   
   .project-list {
-  margin-top:2em;
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:center;
-  overflow-y:auto;
-  height:38em;
-  width:inherit
+  margin-top: 2em;
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  align-items: stretch;
+  height: auto;
+  overflow: visible;
+  width: 100%;
   }
   
   ::-webkit-scrollbar {
@@ -357,7 +358,9 @@ div#projectList {
     transform: translateY(0);
   }
 }
-  
+.container {
+    margin: 1em;
+}  
    
   .blurb {
     padding-left: 3rem;
@@ -370,14 +373,13 @@ div#projectList {
   width:25em;
   height:fit-content;
   background:-webkit-linear-gradient(45deg,#10152459 30%,#24305259);
-  box-shadow:0 8px 32px 0 #16194618;
-  backdrop-filter:blur(1px);
+   backdrop-filter:blur(1px);
   -webkit-backdrop-filter:blur(4px);
   border:.1em solid #f3298752;
   }
   
   .project-box:hover {
-  box-shadow:0 8px 32px 0 #161946a2;
+  box-shadow:0 8px 16px 0 #161946a2;
   border:.1em solid #f3298e98
   }
   
@@ -396,12 +398,15 @@ div#projectList {
   .project-overview {
   padding-bottom:2.5em;
   white-space: pre-line;
-  font-family:inter;
-  font-size:small;
-  font-weight:400;
+flex: 1 1 auto;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color:#fff;
   }
-  
+  .stack{
+    border-radius: 4px;
+    background: -webkit-linear-gradient(230deg, #10152459 30%, #24305259);
+    padding: 0.5em;
+  }
   .project-techstack {
   display:flex;
   flex-wrap:wrap;
